[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/enemies/base_enemy.png" type="Texture" id=1]
[ext_resource path="res://scenes/weapons/RangedWeapon.gd" type="Script" id=2]
[ext_resource path="res://scenes/weapons/Projectile.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 7.99988 )

[node name="RangedWeapon" type="Area2D"]
position = Vector2( 1.26278, -1.26277 )
rotation = -3.14159
scale = Vector2( 1, -1 )
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -22.7372, 1.26271 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -14.7372, 1.26274 )
scale = Vector2( 0.522077, 0.140615 )
texture = ExtResource( 1 )

[node name="BodyDetection" type="CollisionShape2D" parent="."]
position = Vector2( -62.7372, 1.26261 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Weapon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Weapon_body_exited"]
